# senml-zephyr

./: CMakeLists.txt  README.md  UNITS.md  west.yml
include/: senml_codec.h
samples/cbor_senml/: CMakeLists.txt
samples/cbor_senml/src/: main.c
samples/json_senml/: CMakeLists.txt
samples/json_senml/src/: main.c
src/: senml_codec.c
